# ghostscript-bin

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/ghostscript_bin/: __init__.py
